--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
             velit. Aliquam vulputate velit imperdiet dolor tempor tristique.
           </p>
-          <button class="shopBtn">Shop Now</button>
+          <a href="shop.html"><button class="shopBtn">Shop Now</button></a>
           <button class="exploreBtn">Explore</button>
         </section>
         <div class="intro-img">
