--- a/index.html
+++ b/index.html
@@ -155,6 +155,14 @@
       <div class="fourth-section-bg">
         <div class="fourth-section"></div>
         <div class="fourth-section-image">
+          <img src="images/img-grid-1.jpg" class="img-grid-1" />
+          <img src="images/img-grid-2.jpg" class="img-grid-2" />
+          <img src="images/img-grid-3.jpg" class="img-grid-3" />
+        </div>
+      </div>
+      <!-- <div class="fourth-section-bg">
+        <div class="fourth-section"></div>
+        <div class="fourth-section-image">
           <div>
             <img src="images/img-grid-1.jpg" class="img-grid-1" />
           </div>
@@ -163,7 +171,7 @@
             <img src="images/img-grid-3.jpg" class="img-grid-3" />
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="fourth-section-text">
         <div class="fourth-section-text-header">
           <h1>We Help You Make Modern Interior Design</h1>
